[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/text_smaller.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/ui/decrease_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/increase_icon.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/stat_display.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="StatDisplay" type="MarginContainer"]
margin_right = 110.0
margin_bottom = 45.0
rect_min_size = Vector2( 110, 45 )
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 110.0
margin_bottom = 45.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatValueAndDelta" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 15.0
mouse_filter = 2

[node name="StatName" type="Label" parent="VBoxContainer/StatValueAndDelta"]
margin_right = 91.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "POPULATION"
valign = 1

[node name="DeltaIndicatorCtrl" type="Control" parent="VBoxContainer/StatValueAndDelta"]
margin_left = 95.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeltaIndicatorSprite" type="AnimatedSprite" parent="VBoxContainer/StatValueAndDelta/DeltaIndicatorCtrl"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
centered = false
offset = Vector2( 0, 3 )

[node name="StatValue" type="Label" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 110.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100000"
align = 2
